--- a/package.json
+++ b/package.json
@@ -16,6 +16,28 @@
   ],
   "author": "bjiang",
   "license": "ISC",
+  "devDependencies": {
+    "css-loader": "^0.24.0",
+    "del": "^2.2.2",
+    "file-loader": "^0.9.0",
+    "gulp": "^3.9.1",
+    "gulp-cache": "^0.4.5",
+    "gulp-clean-css": "^2.0.12",
+    "gulp-imagemin": "^3.0.3",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.22.0",
+    "ng-annotate-webpack-plugin": "^0.1.3",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.2",
+    "webpack-stream": "^3.2.0",
+    "webpack-vendor-chunk-plugin": "^1.0.0"
+  },
+  "dependencies": {
+    "angular": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
+    "oclazyload": "^1.0.9"
+  },
   "bugs": {
     "url": "https://github.com/JlineZen/angular-gulp-webpack-oclazyload/issues"
   },
